remv dupli code & fix switcher shadow in dark mode

--- a/src/app/components/global/theme-switcher/theme-switcher.scss
+++ b/src/app/components/global/theme-switcher/theme-switcher.scss
@@ -4,27 +4,36 @@
   cursor: pointer;
   padding: 10px;
   float: left;
-}
 
-#container:hover {
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.07);
-  border-radius: 10px;
-}
+  &:hover {
+    border-radius: 10px;
+  }
 
-.dark_theme {
-  background-image: url("/assets/images/sun.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  transition: all 0.5s ease-in-out;
+  .light_theme, .dark_theme{
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .dark_theme {
+    background-image: url("/assets/images/sun.png");
+  }
+  
+  .light_theme {
+    background-image: url("/assets/images/moon.png");
+  }
 }
 
 .light_theme {
-  background-image: url("/assets/images/moon.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
-  transition: all 0.5s ease-in-out;
+  &:hover {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.07);
+  }
+}
+
+.dark_theme {
+  &:hover {
+    box-shadow: 0 5px 10px rgba(255, 255, 255, 0.07);
+  }
 }
